# audit-trail-ai

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  audit_log.py  blockchain_anchor.py  merkle_tree.py
backend/app/routers/: __init__.py  audit.py  compliance.py  verify.py
backend/app/schemas/: __init__.py  audit.py  compliance.py  verification.py
backend/app/services/: __init__.py  blockchain_service.py  export_service.py  gdpr_service.py  hasher.py  log_capture.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useAuditLogs.ts  useVerification.ts
frontend/src/pages/: AuditLogs.tsx  Compliance.tsx  Dashboard.tsx  DecisionLineage.tsx  Export.tsx  Verification.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: crypto.ts  format.ts  merkle.ts
sdk/python/: README.md  setup.py
sdk/python/audit_trail_ai/: __init__.py  client.py  decorators.py  types.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  crypto.ts  index.ts  types.ts
